
MONITORING:
1. Added whitening option in get_dvv().

TYPES:
1. FFTData, fixed a minor bug when getting Nfft for single trace data.
2. CorrData shaping: trim_end option to accommodate the need by FWANT.

PLOTTING:
1. plot_psd() bug fixed

STACKING:
1. Fixed a bug in robust stacking when the trace amplitudes are anomalously small.

==================================================================
Updates in v0.7.3
NOISE:
1. Added mpi option and fixed error in handling wrong file, in extract_corrdata()
2. Fixed error handling in get_stationpairs().
3. Added split_sides() to split corrfile sides and save separately.
4. Added shaping_corrdata() to wrap shaping function, convolving with wavelet.
5. Added split option in merge_pairs().

TYPES:
1. Added CorrData.shaping() to shape the data with wavelet.
2. Added CorrData.save() to wrap saving functions.
3. In CorrData.to_asdf(), save stack_method.
4. Fixed a bug in CorrData.to_egf() where the zero lag was not handled correctly. The negative side was wrong.

UTILS:
1. Added gaussian() and ricker() as the shaping wavelets.
2. Added box_smooth().

DOWNLOADERS:
1. In read_data(), changed default to False for getstainv.

HELPERS:
1. Added wavelet_labels().

MONITORING:
1. Added vpcluster_evaluate_kmean() to find the optimal number of clusters.

DISPERSION:
1. Improved frequency steps in disp_waveform_bp().

STACKING:
1. Synced with stackmaster functions.

CLUSTERING:
1. Automatically determine the optimal number of clusters.

==================================================================
Updates in v0.7.2
All modules: Cleaned up unused functions.

TYPES:
1. CorrData.subset() changed overwrite to False by default.
2. DvvData, added get_info() to streamline and wrapup key information for other use.
3. DvvData: added save() as a wrapper for saving functions, including to_asdf() and to_pickle.
4. DvvData: added to_pickle() to save data to pickle files. This is mainly aiming to